--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2707,6 +2707,10 @@ en:
       upload_description: "Upload a text file to create tags in bulk"
       upload_instructions: "One per line, optionally with a tag group in the format 'tag_name,tag_group'."
       upload_successful: "Tags uploaded successfully"
+      delete_unused_confirmation: "Are you sure you want to delete %{count} unused tags?"
+      delete_unused: "Delete Unused Tags"
+      delete_unused_description: "Delete all tags which are not attached to any topics or personal messages"
+      cancel_delete_unused: "Cancel"
       filters:
         without_category: "%{filter} %{tag} topics"
         with_category: "%{filter} %{tag} topics in %{category}"
