--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1170,7 +1170,7 @@ en:
     forgot_password:
       title: "Password Reset"
       action: "I forgot my password"
-      invite: "Enter your username or email address, and we'll send you a password reset email."
+      invite: "Enter your fucking username or email address, and we'll send you a password reset email."
       reset: "Reset Password"
       complete_username: "If an account matches the username <b>%{username}</b>, you should receive an email with instructions on how to reset your password shortly."
       complete_email: "If an account matches <b>%{email}</b>, you should receive an email with instructions on how to reset your password shortly."
